--- a/index.html
+++ b/index.html
@@ -82,68 +82,50 @@
     <!-- MY PROJECT START -->
     <section id="projects-list">
       <div class="container">
-        <div class="row text-center mb-4">
+        <div class="row text-center mb-3">
           <h2>My Projects</h2>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/danan1.jpg" class="card-img-top" alt="..." width="100" />
+              <img src="src/survey-form.png" class="card-img-top" alt="..." width="100" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Form Survey</h5>
+                <p class="card-text">Sebuah form survey yang dibuat dengan menggunakan HTML dan CSS. Website ini dibuat untuk memenuhi project course freeCodeCamp</p>
+                <a href="https://danandak.github.io/survey-form" class="btn btn-primary">Lihat Projek</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/danan1.jpg" class="card-img-top" alt="..." width="100" />
+              <img src="src/bootstrap-project-1.png" class="card-img-top" alt="..." width="100" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Bootstrap Page</h5>
+                <p class="card-text">Halaman bootstrap sederhana untuk menampilkan detail sebuah aplikasi dan fitur-fiturnya</p>
+                <a href="https://danandak.github.io/bootstrap-project-1/" class="btn btn-primary">Lihat Projek</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-5">
+          <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/danan1.jpg" class="card-img-top" alt="..." width="100" />
+              <img src="src/SMIC-clone.png" class="card-img-top" alt="..." width="100" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">SMIC 2022 Clone</h5>
+                <p class="card-text">Cloning website SMIC 2022 FMIPA UNJ yang dibuat dengan bootstrap</p>
+                <a href="https://danandak.github.io/SMIC-clone/" class="btn btn-primary">Lihat Projek</a>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="1"
-          d="M0,192L48,186.7C96,181,192,171,288,149.3C384,128,480,96,576,112C672,128,768,192,864,202.7C960,213,1056,171,1152,154.7C1248,139,1344,149,1392,154.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg> -->
-      <footer class="bg-primary text-white text-center p-2 shadow-lg">
+      <!-- FOOTER START -->
+      <footer class="bg-primary text-white text-center p-2 shadow-lg mt-5">
         <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <b> Danan</b></p>
       </footer>
+      <!-- FOOTER END -->
     </section>
     <!-- MY PROJECT END -->
-
-    <!-- CONTACT START -->
-    <!-- <section id="contact">
-      <div class="container">
-        <div class="row text-center">
-          <h3>Contact Me</h3>
-        </div>
-      </div>
-    </section> -->
-    <!-- CONTACT END -->
-
-    <!-- FOOTER START -->
-    <!-- FOOTER END -->
 
     <!-- JS BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
