--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/survey-form.png" class="card-img-top" alt="..." width="100" />
+              <img src="src/survey-form.png" class="card-img-top"/>
               <div class="card-body">
                 <h5 class="card-title">Form Survey</h5>
                 <p class="card-text">Sebuah form survey yang dibuat dengan menggunakan HTML dan CSS. Website ini dibuat untuk memenuhi project course freeCodeCamp</p>
@@ -98,7 +98,7 @@
           </div>
           <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/bootstrap-project-1.png" class="card-img-top" alt="..." width="100" />
+              <img src="src/bootstrap-project-1.png" class="card-img-top"/>
               <div class="card-body">
                 <h5 class="card-title">Bootstrap Page</h5>
                 <p class="card-text">Halaman bootstrap sederhana untuk menampilkan detail sebuah aplikasi dan fitur-fiturnya</p>
@@ -108,7 +108,7 @@
           </div>
           <div class="col-md-4 mt-2">
             <div class="card">
-              <img src="src/SMIC-clone.png" class="card-img-top" alt="..." width="100" />
+              <img src="src/SMIC-clone.png" class="card-img-top"/>
               <div class="card-body">
                 <h5 class="card-title">SMIC 2022 Clone</h5>
                 <p class="card-text">Cloning website SMIC 2022 FMIPA UNJ yang dibuat dengan bootstrap</p>
